--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,5 +59,6 @@ dependencies {
     implementation "androidx.activity:activity-ktx:1.1.0"
     implementation "androidx.fragment:fragment-ktx:1.2.5"
     implementation "io.coil-kt:coil:0.11.0"
+    implementation 'com.squareup.retrofit2:converter-simplexml:2.0.2'
 
 }
